Migrate to CoreUI-vue v3.1.4

--- a/src/main/g8/fe-gui/public/index.html
+++ b/src/main/g8/fe-gui/public/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
+<!--#GovueAdmin-Customized-->
 <!--
-#GovueAdmin-Customized
-Based on GoVueAdmin.g8 frontend v0.5.0
-
-Template by
+Template by:
 * CoreUI Free - Vue.js Admin Template
-* @version 3.1.1
+* @version 3.1.4
 * @link https://coreui.io/vue/
-* Copyright (c) 2020 creativeLabs Łukasz Holeczek
+* Copyright (c) 2021 creativeLabs Łukasz Holeczek
 -->
 <!-- #{appName} v#{appVersion} -->
 <!-- #{appDescription} -->
